# voice_to_text

./: Copy of WhisperX - Word-Level transcript time-stamping.ipynb  main.py  pyproject.toml
