[tool.poetry]
name = "voicetext"
version = "0.1.0"
description = "voice to text module"
authors = ["praveen <praveen@vittae.money>", "vaaghu <vaaghu@vittae.money>"]

[tool.poetry.dependencies]
python = "^3.10"
torch = "2.0.0"
torchaudio = "2.0.0"
whisperx = {git = "https://github.com/m-bain/whisperx.git", rev = "main"}
numpy = "^1.26.4"
pandas = "^2.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
